<resources>
    <string name="app_name">AndroidUIandLogin-BillGanley</string>
    <!-- Strings for the Login Activity -->
    <string name="act_login_msg">Login / SignUp</string>
    <string name="edit_text_user">Email or ID</string>
    <string name="edit_text_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_view_or">OR</string>
    <string name="btn_create_user">Sign Up</string>
    <string name="edit_text_firstname">Firstname</string>
    <string name="user_created">User successfully created</string>
    <string name="image_view_description">Users</string>
</resources>
